# GlassBox-Prompt-Optimizer

./: .gitignore  README.md  debug_c.txt  pyproject.toml  reproduce_issue.py  requirements.txt  test_output.txt  verify_fix.py  verify_opro_run.py  verify_persistence.py
.agent/personas/: architect.md  qa_brat.md  scribe.md
.agent/rules/: hmp.md
.agent/workflows/: librarian.md  shadow-writer.md
docs/: BUG_LOG.md  COMMAND_REFERENCE.md  Original_Boeing_Requirements.md  living_specs.md  requirements version 0.0.2-alpha.md  requirements version 0.0.4-alpha.md  tether_strategies.md
docs/bug_log/: BUG-011-sidebar-flush.md  BUG-012-gray-flash.md  BUG-013-gear-settings.md  BUG-014-invisible-borders.md  BUG-015-ui-styling-issues.md  BUG-018-plus-button-distortion.md  BUG-019-stop-button-style.md  BUG-020-scrollbar-persistence.md  BUG-022-badge-implementation-rethink.md  BUG-023-button-style-swap.md  BUG-023-ui-failures.md  BUG-023-zone-c-headers.md  BUG-023-zone-c-ui-persistence.md  BUG-024-file-list-overflow.md  BUG-024-zone-a-zoom-alignment.md  BUG-025-zone-alignment-failure.md  BUG-025-zone-c-hover-logic.md  BUG-026-header-text-alignment.md  BUG-026-zone-c-selection-logic.md  BUG-027-row-compression-failure.md  v0_0_6_alpha_failure.md
docs/requirements/: living_specs.md  requirements version 0.0.5-alpha.md  requirements version 0.0.6-alpha.md
docs/requirements_archive/: requirements version 0.0.3-alpha.md
glassbox/: __init__.py  app.py
glassbox/config/: __init__.py  config.toml
glassbox/core/: __init__.py  ape_engine.py  (+8 more)
tests/: test_unified_candidate.py
(+24 files in other folders)
